# LsS-LmS

./: README.md  assisted.txt  db.sqlite3  manage.py  pyproject.toml  readme.txt  requirements.text  requirements.txt
LiveSpaceSocial/: db.sqlite3  manage.py
LiveSpaceSocial/LiveSpaceSocial/: asgi.py  settings.py  urls.py  wsgi.py
LiveSpaceSocial/LsS/: models.py  views.py
LsS/: admin.py  apps.py  forms.py  models.py  views.py
LsS/migrations/: 0001_initial.py  0002_post.py  0002_profilemodel_image.py  0003_alter_profilemodel_image.py
backend/frontend/: package-lock.json  package.json
config/: settings.py  urls.py
config/config/: settings.py
static/: base.css  main.css
staticfiles/: base.css
templates/: base.html  edit_profile.html  home.html  login.html  logout.html  navbar.html  notification.html  post.html  profile.html  profile_update.html  register.html  search.html  tweet_detail.html  tweet_form.html  user_detail.html
twitter_authentication/: forms.py  views.py
twitter_clone/: admin.py  apps.py
twitter_notification/: models.py  views.py
twitter_notification/migrations/: 0001_initial.py  0002_alter_notification_is_seen.py  0003_alter_notification_is_seen.py
twitter_tweet/: forms.py  models.py  views.py
twitter_tweet/migrations/: 0001_initial.py
twitter_user/: forms.py  models.py  views.py
twitter_user/migrations/: 0001_initial.py
