[tool.poetry]
name = "lss-lms"
version = "0.1.0"
description = ""
authors = ["cooksta120021 <cooksta120021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
