[tool.poetry]
name = "twitterclone-cooksta120021"
version = "0.1.0"
description = ""
authors = ["John <cooksta120021@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
rope = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
